# talk-less-noise

./: .gitignore  LICENSE  README.md  docker-compose.yml  openapi.json  test-fastapi.yml
.github/workflows/: azure-ci.yml  docker-hub-ci.yml  github-container-registry-ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/app/: auth.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: survey.py  usage.py
backend/app/config/: settings.py
backend/app/config/settings/: __init__.py  dev.py  prod.py
backend/app/db/: auth.py  operations.py
backend/app/schemas/: __init__.py  response.py  survey.py  usage.py
backend/app/service/: survey.py
backend/app/utils/: logging.py  time.py
backend/test/: __init__.py  conftest.py  test_db_conn.py  test_journey_map.py  test_survey.py
backend_az_function/QueueToDiscord/: __init__.py
backend_listener/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend_nginx/: Dockerfile  default-bridge.conf  default-dev.conf  default.conf  entrypoint.sh  index.html  old_local.conf
backend_test/: main.py
config/: db_creds.json  surveyInfo.json
docs/: Architecture Simplified.drawio  Capstone Architecture.drawio
frontend/: Dockerfile  Dockerfile.local  Dockerfile.remote  docker-build.sh  index.html  package-lock.json  package.json  script.js
frontend/app/: package copy.json  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.js  animationUtils.js  config.js
mongo_config/schemas/: dual.js  surveyAnswers.js  (+1 more)
(+66 files in other folders)
