[tool.poetry]
name = "Talk-Less-Noise-Backend"
version = "0.1"
description = "API Server for Talk-Less-Noise"
authors = ["Loh Zheng Yi <nuke504@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
Autologging = "^1.3.2"
fastapi = "^0.65.0"
motor = "^2.4.0"
tornado = "^6.1"
pymongo = "^3.11.4"
requests = "^2.25.1"
pydantic = "^1.7.3"
pytz = "^2021.1"
uvicorn = "^0.14"
dnspython = "^2.1.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
numpy = "^1.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
